# stm32G0-w5500

./: .gitignore  .mxproject  .project  CMakeLists.txt  g0-w5500.ioc  readme.md
Core/Inc/: stm32g0xx_hal_conf.h
Core/Src/: gpio.c  main.c  rtc.c  spi.c  usart.c
app/: app.c  retarget.c
app/include/: app.h  retarget.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
ioLibrary_Driver/: CMakeLists.txt  file-path.py  header.txt  source.txt
ioLibrary_Driver/Internet/DHCP/: dhcp.c
ioLibrary_Driver/Internet/SNTP/: sntp.c
